# BitBuddy

./: .gitignore  .gitmodules  README.md
ControlStation/: CMakeLists.txt  README.md  res.qrc  yolo.py
ControlStation/calibration/: K_fisheye.csv  d_fisheye.csv  d_omni.csv  xi_omni.csv
ControlStation/runtime_files/: pointCloudToGridMap2D.py
ControlStation/runtime_files/calibration/: K_omni.csv
ControlStation/runtime_files/mapping/: KeyFrameTrajectory.txt  bit_buddy  bit_buddy_map_pts_and_keyframes.txt  pathfinding.py  slam  slam.yaml
ControlStation/runtime_files/pathfinding/: AStar.py
ControlStation/src/: Camera.cpp  Camera.h  Console.cpp  Console.h  DesktopCam.cpp  DesktopCam.h  Joystick.cpp  Joystick.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  ObjectDetection.cpp  ObjectDetection.h  OutputWatcher.cpp  OutputWatcher.h  Switch.cpp  Switch.h  TelemetryViewer.cpp  TelemetryViewer.h  constants.h  main.cpp  server.cpp
ControlStation/src/RaspSim/: RaspAxes.h  RaspCam.h  RaspSim.h  RaspSwitch.h  RaspTelemetry.h
ControlStation/src/communication/: DesktopCam.cpp  RaspAxes.cpp  RaspAxes.h  RaspCam.cpp  RaspCam.h  RaspSwitch.cpp  RaspSwitch.h
MappingAndLocalization/: 3Dto2D.py  bit_buddy.cc  bit_buddy2.cc  coordinate.py  pointCloudToGridMap2D_2.py  slamMapForRoom.py
MappingAndLocalization/camera_calibration/: .test.py.swp  README.md  calibrate.py  test.py
MappingAndLocalization/camera_calibration/SLAM/: Map.cc  Map.h  System.h  bit_buddy.cc
MappingAndLocalization/camera_calibration/calibrationfiles/: README.md  calibration.pkl  cameraDistortion.pkl  cameraDistortion.txt  cameraMatrix.pkl  cameraMatrix.txt
MappingAndLocalization/camera_calibration/calpic/: cameraDistortion.txt  cameraMatrix.txt
MappingAndLocalization/path_planning/: AStar.py  AStar_2.py  AStar_3.py  image.pgm
ObjectDetection/: yolo.py
ObjectDetection/python/: cudnn.txt  yolo.py
ObjectDetection/yolov5-opencv-cpp/cpp/: yolo.cpp
ObjectDetection/yolov5-opencv-cpp/python/: yolo.py
RemoteControlCommunication/: DesktopClient.cpp
communication/: client.cpp  client.py  divide_video_capture.ipynb  image.py  makefile  rasperryPiCam.cpp  server.cpp
communication/CameraCommunication/: DesktopCam.cpp  DesktopVisionCam.cpp  QtVision.cpp  RaspCam.cpp  RaspperyPiCamVideoStream.cpp
communication/RemoteControlCommunication/: DesktopClient.cpp  RasperryPiServer.cpp  SwitchTCP_Client.cpp  SwitchTCP_Server.cpp  UDPclient.cpp  UDPserver.cpp  client
embedded/: CMakeLists.txt  Makefile  README.md  lcd_test.cpp  main.cpp
embedded/components/CalServo/: CMakeLists.txt  CalServo.cpp  CalServo.h
embedded/components/HC_SR04/: CMakeLists.txt  HC_SR04.cpp  HC_SR04.h
embedded/components/I2Cdev/: CMakeLists.txt  I2Cdev.cpp  I2Cdev.h
embedded/components/LCD/: CMakeLists.txt  LCD.cpp  LCD.h  sample1.cpp
embedded/components/MPU6050/: CMakeLists.txt  Example.cpp  MPU6050.cpp  MPU6050.h  dataread.cpp
embedded/components/PCA9685/: CMakeLists.txt  PCA9685.cpp  PCA9685.h
embedded/components/RobotDog/: CMakeLists.txt  RobotDog.cpp  RobotDog.h
embedded/components/RobotDog/include/: RobotDog.h  bodyFK.h  common.h  inv_kinematics.h  legIK.h
embedded/components/RobotDog/src/: RobotDog.cpp  bodyFK.cpp  common.cpp  inv_kinematics.cpp  legIK.cpp
embedded/include/: inverse_kinematics.h  reverse_kinematics.h
embedded/src/: main.cpp
embedded/tests/camera/: client.cpp  client.py  raspberry_side.py  server.cpp  server.py
embedded/tests/realtime/: main  main.cpp  sensorData.txt
